--- a/app/src/main/res/layout/item_reservation.xml
+++ b/app/src/main/res/layout/item_reservation.xml
@@ -5,17 +5,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
-    <androidx.cardview.widget.CardView
+    <RelativeLayout
+        android:background="#d0000000"
         android:id="@+id/res"
-        app:cardBackgroundColor="#DD000000"
         android:elevation="3dp"
-        app:cardCornerRadius="10dp"
         android:layout_width="match_parent"
-        android:layout_height="300dp" >
+        android:layout_height="220dp" >
 
         <TextView
-            android:layout_gravity="center_horizontal"
-            android:fontFamily="@font/roboto_regular"
+            android:layout_centerHorizontal="true"
+            android:fontFamily="@font/roboto_medium"
             android:textColor="@color/white"
             android:text="Nouvelle reservation"
             android:textSize="30dp"
@@ -24,38 +23,71 @@
 
         <TextView
             android:id="@+id/nomClient"
-            android:text="dsfsdfsdfsdfsd"
-            android:layout_marginTop="50dp"
-            android:layout_gravity="center_horizontal"
+            android:text="email"
+            android:layout_marginTop="60dp"
+            android:textSize="20dp"
+            android:fontFamily="@font/roboto_regular"
+            android:textColor="@color/white"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:id="@+id/dateDebut"
+            android:text="Date Debut"
+            android:layout_marginTop="90dp"
+            android:textSize="20dp"
+            android:fontFamily="@font/roboto_regular"
+            android:textColor="@color/white"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:id="@+id/dateFin"
+            android:text="Date Fin"
+            android:layout_marginTop="120dp"
+            android:textSize="20dp"
+            android:fontFamily="@font/roboto_regular"
+            android:textColor="@color/white"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:id="@+id/Duree"
+            android:text="Durée"
+            android:layout_marginTop="150dp"
+            android:textSize="20dp"
+            android:fontFamily="@font/roboto_regular"
+            android:textColor="@color/white"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:id="@+id/prix"
+            android:text="Prix"
+            android:layout_marginTop="180dp"
+            android:textSize="20dp"
             android:fontFamily="@font/roboto_regular"
             android:textColor="@color/white"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
 
-
-        <Button
-            android:id="@+id/refuser"
-            android:layout_marginStart="280dp"
-            android:layout_marginBottom="12dp"
-            android:layout_gravity="bottom"
-            android:background="@drawable/ic_clear"
-            android:layout_width="50dp"
-            android:layout_height="50dp" />
-
-        <Button
-            android:id="@+id/accepter"
-            android:layout_marginStart="80dp"
-            android:layout_marginBottom="12dp"
-            android:layout_gravity="bottom"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:background="@drawable/ic_check"
-
+        <ImageView
+            android:maxHeight="150dp"
+            android:maxWidth="15dp"
+            android:cropToPadding="true"
+            android:id="@+id/ccp"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:layout_marginTop="55dp"
+            android:layout_marginStart="230dp"
             />
 
 
-    </androidx.cardview.widget.CardView>
+
+
+
+    </RelativeLayout>
 
 
 </RelativeLayout>
