--- a/app/src/main/res/layout/activity_ajouter_hotel.xml
+++ b/app/src/main/res/layout/activity_ajouter_hotel.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,7 +7,15 @@
     android:background="@color/background"
     tools:context=".AjouterHotelActivity">
 
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+
+
     <TextView
+        android:layout_gravity="center_horizontal"
         android:id="@+id/txt"
         android:layout_marginTop="20dp"
         android:layout_width="wrap_content"
@@ -16,7 +24,7 @@
         android:textColor="@color/white"
         android:fontFamily="@font/roboto_regular"
         android:textSize="30dp"
-        android:layout_centerHorizontal="true"/>
+        />
 
     <LinearLayout
         android:layout_marginTop="10dp"
@@ -223,7 +231,6 @@
 
     <EditText
         android:textColor="@color/white"
-        android:layout_marginTop="420dp"
         android:layout_centerHorizontal="true"
         android:hint="prix solo"
         android:textColorHint="@color/white"
@@ -235,7 +242,7 @@
         android:textColorHint="@color/white"
         android:textColor="@color/white"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="455dp"
+
         android:id="@+id/prix_duo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
@@ -243,7 +250,7 @@
         android:textColor="@color/white"
         android:hint="prix triple"
         android:textColorHint="@color/white"
-        android:layout_marginTop="485dp"
+
         android:layout_centerHorizontal="true"
         android:id="@+id/prix_triple"
         android:layout_width="wrap_content"
@@ -252,7 +259,7 @@
         android:hint="prix studio"
         android:textColorHint="@color/white"
         android:textColor="@color/white"
-        android:layout_marginTop="520dp"
+
         android:layout_centerHorizontal="true"
         android:id="@+id/prix_studio"
         android:layout_width="wrap_content"
@@ -270,21 +277,20 @@
         android:layout_alignParentEnd="true"
         android:layout_marginEnd="20dp"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="190dp"
+
         />
 
 
     <EditText
+        android:layout_marginTop="10dp"
+        android:layout_gravity="center_horizontal"
         android:id="@+id/description"
+        android:paddingStart="10dp"
         android:textColorHint="@color/white"
         android:textColor="@color/white"
         android:hint="Description de l'hotel"
-        android:layout_marginStart="10dp"
-        android:layout_marginBottom="40dp"
-        android:paddingStart="8dp"
-        android:layout_alignParentBottom="true"
         android:background="@drawable/custom_input"
-        android:layout_width="200dp"
+        android:layout_width="match_parent"
         android:layout_height="120dp" />
 
     <Button
@@ -302,4 +308,7 @@
         android:layout_height="wrap_content"
         android:background="@drawable/custom_button"/>
 
-</RelativeLayout>
+
+</LinearLayout>
+
+</ScrollView>
