--- a/app/src/main/res/layout/activity_hotel.xml
+++ b/app/src/main/res/layout/activity_hotel.xml
@@ -15,6 +15,17 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
+    <Button
+        android:onClick="dis"
+        android:id="@+id/disconnect"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="20dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:background="@drawable/custom_orange_button"
+        android:text="Se deconnecter"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content" />
 
 
 
