--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,6 +43,18 @@
         android:background="@drawable/accent_bg">
     </ImageView>
 
+    <Button
+        android:onClick="disc"
+        android:id="@+id/disconnect"
+        android:layout_marginStart="30dp"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="30dp"
+        android:layout_alignParentBottom="true"
+        android:background="@drawable/custom_orange_button"
+        android:text="Se deconnecter"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content" />
+
 
 
 
